; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-events.c_conv_addr6.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-events.c_conv_addr6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conv_addr6.abuf = internal global [64 x i8] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @conv_addr6(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  store i8* getelementptr inbounds ([64 x i8], [64 x i8]* @conv_addr6.abuf, i64 0, i64 0), i8** %4, align 8
  br label %8

8:                                                ; preds = %7, %2
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to i16*
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @conv_ipv6_internal(i16* %10, i8* %11)
  %13 = load i8*, i8** %4, align 8
  ret i8* %13
}

declare dso_local i32 @conv_ipv6_internal(i16*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
